[package]
name = "checked_num"
version = "0.1.3"
edition = "2024"

description = "Overflow-checked numbers for safety without sacrificing ergonomics."
repository = "https://github.com/benstoy/checked_num"

license = "MIT"
readme = "README.md"

keywords = ["number", "int", "num", "overflow", "checked"]
categories = ["data-structures", "mathematics", "no-std", "rust-patterns"]

[dependencies]
num-traits = "0.2.19"
